Set doctest to ignore exception details to avoid Python version specific content

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,3 +68,4 @@ all = ["uncertainties[doc,test,arrays]"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"
